# Staff

./: .gitignore  CMakeLists.txt  README.md  projects_info.txt
include/: Cleaner.h  Driver.h  Employee.h  Engineer.h  Factory.h  Interfaces.h  Manager.h  Personal.h  Programmer.h  Project.h  SeniorManager.h  TeamLeader.h  Tester.h
src/: Cleaner.cpp  Driver.cpp  Employee.cpp  Engineer.cpp  Factory.cpp  Manager.cpp  Personal.cpp  Programmer.cpp  Project.cpp  SeniorManager.cpp  TeamLeader.cpp  Tester.cpp  main.cpp
